--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@angular/router": "^6.0.3",
     "bootstrap": "^4.1.2",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "ngx-bootstrap": "^3.0.1",
+    "ngx-cookie-service": "^1.0.10",
+    "ngx-pagination": "^3.2.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
