--- a/angular.json
+++ b/angular.json
@@ -23,12 +23,18 @@
               "src/assets"
             ],
             "styles": [
+              
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "./node_modules/font-awesome/css/font-awesome.css"
+              "./node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "./node_modules/ngx-toastr/toastr.css"
+
             ],
             "scripts": [
+              "./node_modules/chart.js/dist/Chart.js",
               "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/popper.js/dist/umd/popper.min.js",
               "./node_modules/bootstrap/dist/js/bootstrap.min.js"
 
             ]
